--- a/admin.html
+++ b/admin.html
@@ -45,8 +45,7 @@
             <div class="card-header">
               <h2 class="text-center">Admin Panel</h2>
             </div>
-            <div class="card-body" id="adminContent">
-            </div>
+            <div class="card-body" id="adminContent"></div>
           </div>
         </div>
       </div>
@@ -57,14 +56,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script>
-      const baseurl = 'http://localhost:3001'; 
+      const baseurl = "http://localhost:3001";
       // Function to load the "Add User" form
       function loadAddUserForm() {
         if (!localStorage.token || localStorage.token === "") {
           window.alert("Please Login Before Access This Page");
           window.location.href = "./login.html";
         }
-        console.log('here')
         const addUserForm = `
                 <h3>Add User</h3>
                 <form id="addUserForm">
@@ -113,14 +111,14 @@
             })
               .then((response) => {
                 if (!response.ok) {
-                  if (response.status === 403) {
-                    window.alert('Session Expired');
-                    window.location.href = './login.html'
+                  if (response.status === 401) {
+                    window.alert("Session Expired");
+                    window.location.href = "./login.html";
                   } else {
                     throw new Error("Network response was not ok");
                   }
                 }
-                return response.json()
+                return response.json();
               })
               .then((data) => {
                 // Handle the response from the server (e.g., show a success message or handle errors)
@@ -130,10 +128,10 @@
               })
               .catch((error) => {
                 // Handle any errors that occurred during the fetch
-                if (error.status === 403) {
-                  window.alert('Session Expired');
-                  window.location.href = './login.html'
-                };
+                if (error.status === 401) {
+                  window.alert("Session Expired");
+                  window.location.href = "./login.html";
+                }
               });
           });
       }
@@ -146,14 +144,14 @@
         fetch(endpoint, {
           method: "POST",
           headers: {
-            Authorization: `Bearer ${token}`, // Include the token in the Authorization header
+            Authorization: `Bearer ${token}`,
           },
         })
           .then((response) => {
             if (!response.ok) {
-              if (response.status === 403) {
-                window.alert('Session Expired');
-                  window.location.href = './login.html'
+              if (response.status === 401) {
+                window.alert("Session Expired");
+                window.location.href = "./login.html";
               } else {
                 throw new Error("Network response was not ok");
               }
@@ -167,7 +165,6 @@
             }
 
             // Handle the response from the server
-            console.log("Data received:", data.data); // Check if data is received
             const tableContent = `
             <h3>${tableName}</h3>
             <table class="table table-bordered">
@@ -197,10 +194,10 @@
           })
           .catch((error) => {
             // Handle any errors that occurred during the fetch
-            if (error.status === 403) {
-                  window.alert('Session Expired');
-                  window.location.href = './login.html'
-                };
+            if (error.status === 401) {
+              window.alert("Session Expired");
+              window.location.href = "./login.html";
+            }
           });
       }
 
@@ -212,15 +209,14 @@
         fetch(endpoint, {
           method: "POST",
           headers: {
-            Authorization: `Bearer ${token}`, // Include the token in the Authorization header
+            Authorization: `Bearer ${token}`,
           },
         })
           .then((response) => {
-            console.log(response)
             if (!response.ok) {
-              if (response.status === 403) {
-                window.alert('Session Expired');
-                window.location.href = './login.html'
+              if (response.status === 401) {
+                window.alert("Session Expired");
+                window.location.href = "./login.html";
               } else {
                 throw new Error("Network response was not ok");
               }
@@ -234,9 +230,8 @@
             }
 
             // Handle the response from the server
-            console.log("Data received:", data.data); // Check if data is received
             let total = 0;
-            data.data.map((item) => total += item.count)
+            data.data.map((item) => (total += item.count));
             const tableContent = `
             <h3>${tableName}</h3>
             <table class="table table-bordered">
@@ -267,12 +262,8 @@
             document.getElementById("adminContent").innerHTML = tableContent;
           })
           .catch((error) => {
-            console.log('hereee', error)
             // Handle any errors that occurred during the fetch
-            if (error.status === 403) {
-                  window.alert('Session Expired');
-                  window.location.href = './login.html'
-                };
+              window.alert(error);
           });
       }
 
