fix wrong variable

--- a/user.html
+++ b/user.html
@@ -64,7 +64,7 @@
             const token = localStorage.getItem('token');
 
             const data = {
-                voteOption: voteOption
+                name: voteOption
             };
 
             // Send a POST request to the API endpoint for adding a vote with authorization headers
